Fixed VMSink